--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "graphql training",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/index.js",
+    "start": "nodemon src/index.js --ext js,graphql",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Horchani Walid",
